Correct header alignment

--- a/css/mailbox.css
+++ b/css/mailbox.css
@@ -96,3 +96,6 @@ th.headerSortUp {
 th.headerSortDown {
     background-image: url(http://localhost/assets/asc.gif);
 }
+.navbar>.container .navbar-brand {
+	margin-top: -7px;
+}
